<resources>
    <string name="app_name">Profil Sekolah</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_prestasi">Prestasi</string>
    <string name="menu_guru">Tenaga Pendidik</string>
    <string name="menu_galeri">Galeri</string>
    <string name="menu_ekskul">Ekstra Kulikuler</string>
    <string name="menu_berita">Berita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>