<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_prestasi"
            android:icon="@drawable/prestasi"
            android:title="@string/menu_prestasi" />
        <item
            android:id="@+id/nav_guru"
            android:icon="@drawable/guru"
            android:title="@string/menu_guru" />
        <item
            android:id="@+id/nav_galeri"
            android:icon="@drawable/galeri"
            android:title="@string/menu_galeri" />
        <item
            android:id="@+id/nav_ekstra"
            android:icon="@drawable/ekskul"
            android:title="@string/menu_ekskul" />
        <item
            android:id="@+id/nav_berita"
            android:icon="@drawable/berita"
            android:title="@string/menu_berita" />
    </group>
</menu>