<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.afinal.ui.home.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_prestasi"
        android:name="com.example.afinal.ui.prestasi.PrestasiFragment"
        android:label="@string/menu_prestasi"
        tools:layout="@layout/fragment_prestasi" />

    <fragment
        android:id="@+id/nav_guru"
        android:name="com.example.afinal.ui.guru.GuruFragment"
        android:label="@string/menu_guru"
        tools:layout="@layout/fragment_guru" />

    <fragment
        android:id="@+id/nav_ekstra"
        android:name="com.example.afinal.ui.ekstra.EkstraFragment"
        android:label="@string/menu_ekskul"
        tools:layout="@layout/fragment_ekstra" />

    <fragment
        android:id="@+id/nav_berita"
        android:name="com.example.afinal.ui.berita.BeritaFragment"
        android:label="@string/menu_berita"
        tools:layout="@layout/fragment_berita" />

    <fragment
        android:id="@+id/nav_galeri"
        android:name="com.example.afinal.ui.galeri.GaleriFragment"
        android:label="@string/menu_galeri"
        tools:layout="@layout/fragment_galeri" />
</navigation>